# capas

./: .gitignore  PRIVACY_POLICY.md  README.md  capas.json  filters.json  index.html
.github/workflows/: android_release.yml  notify-capas-update.yml  update-capas.yml
capas-api/: Cargo.toml  debug.html
capas-api/public/: capas.json  digest.json
capas-api/src/: gemini.rs  main.rs
capas-app/: settings.gradle.kts
capas-app/composeApp/: build.gradle.kts  google-services.json  proguard-rules.pro
capas-app/composeApp/src/androidMain/: AndroidManifest.xml
capas-app/composeApp/src/androidMain/res/drawable/: ic_notification.xml  ic_stat_capas.xml
capas-app/composeApp/src/androidMain/res/values/: strings.xml
capas-app/composeApp/src/androidMain/res/values-en/: strings.xml
capas-app/gradle/: libs.versions.toml
capas-app/iosApp/Configuration/: Config.xcconfig
capas-app/iosApp/iosApp/: AboutScreen.swift  CapasDetailsScreen.swift  CapasScreen.swift  CapasViewModelWrapper.swift  ContentView.swift  Localization.swift  iOSApp.swift
capas-app/iosApp/iosApp.xcodeproj/: project.pbxproj
capas-app/iosApp/iosApp/en.lproj/: Localizable.strings
capas-app/iosApp/iosApp/es.lproj/: Localizable.strings
capas-app/iosApp/iosApp/pt.lproj/: Localizable.strings
capas-app/shared/: build.gradle.kts
capas-app/shared/src/commonMain/kotlin/com/joaobzao/capas/: Koin.kt  (+3 more)
capas-app/signing/: capas-release.jks
capas-trigger/: wrangler.toml
capas-trigger/src/: index.js
docs/specs/: 2026-05-01-weekly-recap.md
docs/superpowers/specs/: 2026-03-28-internacional-tab-design.md
(+34 files in other folders)
